# bbc2021

./: .gitignore  README.md  notes.txt  pyproject.toml
bbc2021/: bot.py  cvlib.py  facerec.py  fvt.py  math.py  pyser.py  stalker_mouse.py  tts.py  util.py
converted_keras/: keras_model.h5  labels.txt
pickle/: some_obj.pkl
pickle/images/: 2018_11_19_58952_1542640181._large.pkl  Mark_Kassen,_Tony_Cárdenas_and_Chris_Evans_(cropped).pkl  avengers-infinity-war-chris-evans-captain-america.pkl  thor_big.0.pkl
