[tool.poetry]
name = "bbc2021"
version = "0.1.0"
description = "your c big big"
authors = ["RenoirTan <renoirtan2005@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.5"
PySimpleGUI = "^4.43"
pyttsx3 = "^2.90"
imutils = "^0.5"
face_recognition = "^1.3"
cvlib = "^0.2"
tensorflow = "^2.5"
cmake = "^3.20"
dlib = "^19.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
